# btc-rsi-app

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/clients/: coin_gecko.py
backend/app/schemas/: rsi.py
backend/app/services/: rsi_service.py
backend/tests/: test_app.py
docs/: roadmap.md
docs/architecture/: backend.md  overview.md
docs/decisions/: 0001-choose-fastapi.md
docs/plan/: implementation-phases.md
frontend/: README.md  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: RSICard.tsx  index.ts
frontend/src/pages/: History.tsx
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile
scripts/: bootstrap_backend.sh  bootstrap_frontend.sh
src/: App.tsx  main.tsx  types.ts
src/pages/: Account.tsx  Dashboard.tsx  Login.tsx
supabase/: config.toml
